# PlayNet

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
notebooks/: resnet_test.ipynb
src/: predict.py  train.py
src/api/: Dockerfile  api.py
src/cli/: __init__.py  predict.py  train.py
src/model/: __init__.py  predict.py  train.py
src/ui/: Dockerfile  simple_ui.py
src/utils/data_scrapping/: download_image.py  make_dataset.py  steam_data_scrapping.py
src/utils/data_scrapping/.ipynb_checkpoints/: steam_data_scrapping-checkpoint.py
